tests/lean/t5.lean.expected.out
g : N → N
h : N
q : N
foo.h : N
t5.lean:13:7: error: unknown identifier 'q'
